--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,8 @@
 <h1>League Analyzer</h1>
 
-<%= simple_form_for @user, url: root_path do |f| %>
-  <%= f.input :email %>
-  <%= f.input :first_name %>
-  <%= f.input :last_name %>
+<%= simple_form_for :search, { url: about_path } do |f| %>
   <%= f.input :summoner_name %>
   <br />
-  <%= f.button :submit, class: "btn btn-primary" %>
+  <%= f.button :submit, "Search", class: "btn btn-primary" %>
 <% end %>
 
